# hls-downloader-client

./: .gitignore  .prettierignore  INSTALL.md  README.md  build-linux.sh  build-mac.sh  client.iss  client.pkgproj  client.spec  install-linux.sh  install-mac.sh  install-win.iss  manifest.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: build.yaml  lint.yaml
assets/: client.bat  client.sh  manifest-chrome.json  manifest-firefox.json
src/: client.py
