# Project
[project]
name = "hls-downloader-app"
#requires-python = ">=3.10"

[project.urls]
Homepage = "https://cssnr.com/"
Source = "https://github.com/cssnr/hls-downloader-app"
Issues = "https://github.com/cssnr/hls-downloader-app/issues"

# Black
# https://black.readthedocs.io/en/stable/usage_and_configuration/
[tool.black]
line-length = 119
extend-exclude = '(\.github)'

# Coverage
# https://coverage.readthedocs.io/en/latest/
[tool.coverage.run]
omit = ["*.egg-info/*", ".github/*"]
source = ["src"]

# Isort
# https://pycqa.github.io/isort/docs/configuration/options.html
[tool.isort]
profile = "black"
lines_after_imports = 2
src_paths = ["src", "test"]
skip = [".github"]

# Mypy
# https://mypy.readthedocs.io/en/stable/config_file.html
[tool.mypy]
#ignore_missing_imports = true
exclude = ["venv"]

# Ruff
# https://docs.astral.sh/ruff/configuration/
[tool.ruff]
line-length = 119
target-version = "py313"
exclude = [".github"]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "B", "Q"]
